--- a/three_throttle_one_steer.ipynb
+++ b/three_throttle_one_steer.ipynb
@@ -207,7 +207,7 @@
     "            self.vehicle.apply_control(carla.VehicleControl(throttle=0.0, brake=1.0))  # stop the car\n",
     "            #observation = self.reset()[0]\n",
     "        else:\n",
-    "            reward = kmh * (1 / distance_to_destination) * (1 / elapsed_time)  # Combined reward\n",
+    "            reward = (1 / distance_to_destination) * (1 / elapsed_time)  # Combined reward\n",
     "\n",
     "\n",
     "        # Check for episode duration\n",
